# image-quality-and-characterization-utilities

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE  README.md  ci_build.sh  create_devenv.cmd  vs2013_64bit.cmd  vs2015_64bit.cmd  vs2017_64bit.cmd
color_constancy_dataset_tools/: annotate_wps_and_ccms.m  avg_wp.m  batch_generate_meta_files.m  batch_generate_privacy_masking.m  calculate_errors.m  chr_from_spectra.m  duplicate_metadata.m  illustrate_wps_and_ccms.m  image_matrix.m  move_ground_truth_files.m  plain16_read.m  plot_wps.m  process_folders_for_privacy.py  process_folders_for_privacy_meta.py  replace_file_extension.m  replace_file_extension_nondot.m  round_lux_est.m  wptool.fig  wptool.m
color_constancy_dataset_tools/data/: Lab_light_source_data.xlsx  Spectral_light_source_data.mat  Spectral_light_source_data.xls  Spectral_light_source_data_validation.mat  Spectral_light_source_data_validation2.mat  Spectral_light_source_data_validation3.mat  Spectral_light_source_data_validation4.mat  Spectral_reflectance_xrite_grey_chart.mat  Spectral_responses.xlsx  frame_format_canon5dmk3.mat  frame_format_canon5dmk3_video.mat  frame_format_canon5dsr.mat  frame_format_nikond810.mat  frame_format_sonyimx135.mat  frame_format_sonyimx135_blccsc.mat  other_characterization_canon5dmk3.mat  other_characterization_canon5dsr.mat  other_characterization_nikond810.mat  other_characterization_sonyimx135.mat  reference_wps_ccms_canon5dmk3.mat  reference_wps_ccms_canon5dsr.mat  reference_wps_ccms_nikond810.mat  reference_wps_ccms_sonyimx135.mat  sr_canon5dmk3.mat  sr_canon5dsr.mat  sr_nikond810.mat  sr_sonyimx135.mat
include/Eigen/: OrderingMethods  Sparse
include/Eigen/src/IterativeLinearSolvers/: IncompleteCholesky.h  IncompleteLUT.h
include/Teisko/: BayerImage.hpp  BayerInfo.hpp  CalculateLux.hpp  Chromaticity.hpp  Color.hpp  ColorCorrection.hpp  LateralChromaticAberration.hpp  LensShading.hpp  MacbethDetector.hpp  NoiseModel.hpp  Preprocessing.hpp  SpectralResponse.hpp  ValidImageArea.hpp
include/Teisko/Algorithm/: Bit.hpp  ConvexHull.hpp  DelaunayTriangulation.hpp  Functors.hpp  Histogram.hpp  Interpolate.hpp  Iterators.hpp  LinearSpace.hpp  NelderMead.hpp  PointXY.hpp  Pow2.hpp  ReduceTo.hpp  StandardDeviation.hpp  TrimmedMean.hpp  VectorMedian.hpp  VectorOperations.hpp
include/Teisko/Data/: MacbethReflectance.hpp
include/Teisko/Image/: API.hpp  Algorithms.hpp  Conversion.hpp  Point.hpp  Polyscale.hpp  RGB.hpp  Support.hpp  TIFF.hpp
tests/: catch.cpp  specs_bayer_info.cpp  specs_calculate_lux.cpp  specs_color.cpp  specs_color_correction.cpp  specs_lateral_chromatic_aberration.cpp  specs_lens_shading.cpp  specs_macbeth_detector.cpp  specs_noise_model.cpp  specs_preprocessing.cpp  specs_spectral_response.cpp  specs_valid_image_area.cpp  test_linker.cpp
tests/Algorithms/: specs_bit.cpp  specs_convex_hull.cpp  specs_delaunay_triangulation.cpp  specs_interpolate.cpp  specs_linear_space.cpp  specs_nelder_mead.cpp  specs_trimmed_mean.cpp  specs_vector_median.cpp
tests/Image/: specs_algorithms.cpp  specs_api.cpp  specs_conversion.cpp  specs_point.cpp  specs_polyscale.cpp  specs_recipes.cpp  specs_rgb.cpp  specs_support.cpp  specs_tiff.cpp
tests/_data/: .gitattributes  icc_profiles.cpp  icc_profiles.hpp
